RESOLVED FIXED 96611
Testing whether indexing type is ArrayWithArrayStorage should not compare against ArrayWithArrayStorage
https://bugs.webkit.org/show_bug.cgi?id=96611
Summary Testing whether indexing type is ArrayWithArrayStorage should not compare aga...
Filip Pizlo
Reported 2012-09-13 00:25:00 PDT
We want to use m_indexingType's high bits for some additional state. That means that comparing directly against ArrayWithArrayStorage may lead to spurious failures when those high bits do get set.
Attachments
the patch (8.88 KB, patch)
2012-09-13 00:28 PDT, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-09-13 00:28:15 PDT
Created attachment 163801 [details] the patch
Filip Pizlo
Comment 2 2012-09-13 01:40:14 PDT
Note You need to log in before you can comment on or make changes to this bug.